only one problem identifies protocal is printing undefined

--- a/src/main/resources/anomalyalert.properties
+++ b/src/main/resources/anomalyalert.properties
@@ -1,4 +1,4 @@
 #Cassandra  properties
 io.heyram.anomalyalert.cassandra.host=localhost
 io.heyram.anomalyalert.cassandra.port=9042
-io.heyram.anomalyalert.cassandra.keyspace=anomaly
+io.heyram.anomalyalert.cassandra.keyspace=intrusiondetection
